header menu bottom section  finishd

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										d="M10.66 9.75C10.5934 9.70722 10.5131 9.6913 10.4352 9.70544C10.3574 9.71959 10.2878 9.76275 10.2405 9.82621C10.1932 9.88968 10.1718 9.96871 10.1805 10.0474C10.1892 10.126 10.2275 10.1984 10.2875 10.25C10.74 10.585 11.2875 11.14 11.2875 11.8725C11.2875 13.3975 8.87 14.6875 6.0075 14.6875C3.145 14.6875 0.720004 13.3975 0.720004 11.8725C0.720004 11.14 1.26 10.585 1.72 10.25C1.78004 10.1984 1.81829 10.126 1.82701 10.0474C1.83574 9.96871 1.8143 9.88968 1.76702 9.82621C1.71974 9.76275 1.65014 9.71959 1.57228 9.70544C1.49442 9.6913 1.41408 9.70722 1.3475 9.75C0.532504 10.3525 0.0975037 11.0875 0.0975037 11.875C0.0975037 13.805 2.69 15.315 6.0025 15.315C9.315 15.315 11.9075 13.815 11.9075 11.875C11.905 11.085 11.475 10.35 10.66 9.75Z"
 										fill="white" />
 								</svg>
-								<span class="ml10 fw400 fs14">Укажите адрес доставки</span>
+								<span class="ml10 fw400 fs14">Укажите адрес <span class="media-hide__text-location">доставки</span></span>
 							</div>
 						</div>
 					</div>
@@ -53,8 +53,8 @@
 					<div class="df ai-center">
 						<div class="header-language mr40 pr">
 							<div class="default-lagnuage tac">
-								<img src="images/global-icon.svg" alt="">
-								<p class="fs14 fw400">Русский</p>
+								<img class="global-icon" src="images/global-icon.svg" alt="">
+								<p class="fs14 fw400 media-hide__text">Русский</p>
 							</div>
 							<div class="header-language__box dn pa">
 								<ul>
@@ -75,6 +75,29 @@
 					</div>
 				</div>
 			</div>
+			
+			<div class="menu">
+				<div class="container">
+					<div class="menu-icons df ai-center jc-between">
+						<a class="menu-icons__icon tac" href="#">
+							<img src="images/home-icon.svg" alt="">
+							<span class="fw600 fs10 db c-white mt10">Главная</span>
+						</a>
+						<a class="menu-icons__icon tac" href="#">
+							<img src="images/restauran-icon.svg" alt="">
+							<span class="fw600 fs10 db c-white mt10">Рестораны</span>
+						</a>
+						<a class="menu-icons__icon tac" href="#">
+							<img src="images/cart-icon.svg" alt="">
+							<span class="fw600 fs10 db c-white mt10">Корзина</span>
+						</a>
+						<a class="menu-icons__icon tac" href="#">
+							<img src="images/user-icon.svg" alt="">
+							<span class="fw600 fs10 db c-white mt10">Профиль</span>
+						</a>
+					</div>
+				</div>
+			</div>
 		</header>
 		<!-- header end -->
 
@@ -84,7 +107,7 @@
 			<section class="first-products__category mt30">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-4">
+						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 							<div class="first-product__content df ai-center c-white">
 								<div class="first-product__box">
 									<div class="first-product__info">
@@ -94,7 +117,7 @@
 											<h2 class="fw700 fs20">Domino's Pizza</h2>
 										</div>
 										<div>
-											mt5 <a class="btn mt10" href="#">Перейти</a>
+											<a class="btn mt10" href="#">Перейти</a>
 										</div>
 									</div>
 								</div>
@@ -103,7 +126,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4">
+						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 							<div class="two-product__content df jc-between ai-center c-white">
 								<div class="first-product__box ">
 									<img src="images/first-product-img2.png" alt="">
@@ -125,7 +148,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4">
+						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 							<div class="three-product__content df ai-center c-white">
 								<div class="first-product__box">
 									<div class="first-product__info">
