--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="first-product__box-imgx- ml60">
+								<div class="first-product__box-img ml60">
 									<img src="images/first-product-img1.png" alt="">
 								</div>
 							</div>
