products html 90% finshd

--- a/orders.html
+++ b/orders.html
@@ -403,6 +403,78 @@
 		<!-- main end -->
 
 		<!-- footer start -->
+		<footer class="footer df ai-center">
+			<div class="container">
+				<div class="footer-wrap">
+					<div class="mb20 footer-left">
+						<h6 class="fs16 fw600 footer_link_title_button">
+							Блюда и кухни
+							<span><img src="./images/bottom-arow-2.svg" alt=""></span>
+						</h6>
+						<div class="df media-footer">
+							<ul class="footer-series series-1">
+								<li><a href="#">Выпечка</a></li>
+								<li><a href="#">Блины</a></li>
+								<li><a href="#">Бургеры</a></li>
+								<li><a href="#">Чебуреки</a></li>
+								<li><a href="#">Кофе</a></li>
+								<li><a href="#">Десерты</a></li>
+								<li><a href="#">Фастуфут</a></li>
+								<li><a href="#">Грузинская кухня</a></li>
+								<li><a href="#">Хот-дог</a></li>
+							</ul>
+							<ul class="footer-series series-2">
+								<li><a href="#">Выпечка</a></li>
+								<li><a href="#">Блины</a></li>
+								<li><a href="#">Бургеры</a></li>
+								<li><a href="#">Чебуреки</a></li>
+								<li><a href="#">Кофе</a></li>
+								<li><a href="#">Десерты</a></li>
+								<li><a href="#">Фастуфут</a></li>
+								<li><a href="#">Грузинская кухня</a></li>
+								<li><a href="#">Хот-дог</a></li>
+							</ul>
+							<ul class="footer-series series-3">
+								<li><a href="#">Выпечка</a></li>
+								<li><a href="#">Блины</a></li>
+								<li><a href="#">Бургеры</a></li>
+								<li><a href="#">Чебуреки</a></li>
+								<li><a href="#">Кофе</a></li>
+								<li><a href="#">Десерты</a></li>
+								<li><a href="#">Фастуфут</a></li>
+								<li><a href="#">Грузинская кухня</a></li>
+								<li><a href="#">Хот-дог</a></li>
+							</ul>
+							<ul class="footer-series series-4">
+								<li><a href="#">Выпечка</a></li>
+								<li><a href="#">Блины</a></li>
+								<li><a href="#">Бургеры</a></li>
+								<li><a href="#">Чебуреки</a></li>
+								<li><a href="#">Кофе</a></li>
+								<li><a href="#">Десерты</a></li>
+								<li><a href="#">Фастуфут</a></li>
+								<li><a href="#">Грузинская кухня</a></li>
+								<li><a href="#">Хот-дог</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="footer-right">
+						<div class="mb20">
+							<h6 class="fs16 footer-series-title df fw600 mb5">О компании <span><img src="./images/bottom-arow-2.svg"
+										alt=""></span></h6>
+							<ul class="footer-series series-5">
+								<li><a href="#">Пользовательское соглашение</a></li>
+								<li><a href="#">Контакты</a></li>
+								<li><a href="#">Доставка</a></li>
+								<li><a href="#">Стать партнером</a></li>
+								<li><a href="#">Стать курьером</a></li>
+							</ul>
+						</div>
+						<a href="#"><span><img src="./images/icon-email.svg" alt=""></span> Обратная связь</a>
+					</div>
+				</div>
+			</div>
+		</footer>
 		<!-- footer end -->
 
 	</div>
