--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			<section class="first-products__category mt30">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 col-12 mb15">
 							<div class="first-product__content df ai-center c-white">
 								<div class="first-product__box">
 									<div class="first-product__info">
@@ -127,7 +127,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 col-12 mb15">
 							<div class="two-product__content df jc-between ai-center c-white">
 								<div class="first-product__box-img">
 									<img src="images/first-product-img2.png" alt="">
@@ -149,7 +149,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 col-12 mb15">
 							<div class="three-product__content df ai-center c-white">
 								<div class="first-product__box">
 									<div class="first-product__info">
@@ -201,7 +201,8 @@
 							<li>
 								<a class="sorting-bar__link fs14 fw600 c-white df ai-center" href="#">
 									Еще
-									<svg class="ml10" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<svg class="ml10" width="14" height="8" viewBox="0 0 14 8" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
 										<path d="M1 1L7 7L13 1" stroke="white" stroke-width="0.5" stroke-linecap="round" />
 									</svg>
 								</a>
@@ -217,7 +218,8 @@
 						<div class="df jc-between">
 							<div class="pr">
 								<div class="select-box df ai-center">
-									<h4 class="mr5 fs14 fw500 c-white">Доставка: <span class="select-tme media-hide__time">сейчас</span></h4>
+									<h4 class="mr5 fs14 fw500 c-white">Доставка: <span class="select-tme media-hide__time">сейчас</span>
+									</h4>
 									<svg width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M1 1L7 7L13 1" stroke="white" stroke-width="0.5" stroke-linecap="round" />
 									</svg>
@@ -641,10 +643,12 @@
 					<div class="swiper mySwiper2">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<div class="profitable-offer__card df jc-between profitable-offer__card-one c-white pt20 pl20 pb20 pr10">
+								<div
+									class="profitable-offer__card df jc-between profitable-offer__card-one c-white pt20 pl20 pb20 pr10">
 									<div class="profitable-offer__info">
 										<h3 class="fw700 fs28">Счастливые часы</h3>
-										<p class="fs16 fw500 pt10 pb15">Получите <span class="fs18 fw600">скидку 20%</span><br> в будние дни с
+										<p class="fs16 fw500 pt10 pb15">Получите <span class="fs18 fw600">скидку 20%</span><br> в будние дни
+											с
 											12:00 до 17:00</p>
 									</div>
 									<div class="tac">
@@ -657,7 +661,8 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="profitable-offer__card df jc-between profitable-offer__card-two c-white pt20 pl20 pb20 pr10">
+								<div
+									class="profitable-offer__card df jc-between profitable-offer__card-two c-white pt20 pl20 pb20 pr10">
 									<div class="profitable-offer__info">
 										<h3 class="fw700 fs28">Счастливые часы</h3>
 										<ul class="pt15 pb10">
@@ -678,7 +683,8 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="profitable-offer__card df jc-between profitable-offer__card-three c-white pt20 pl20 pb20 pr10">
+								<div
+									class="profitable-offer__card df jc-between profitable-offer__card-three c-white pt20 pl20 pb20 pr10">
 									<div class="profitable-offer__info">
 										<h3 class="fw700 fs28">Счастливые часы</h3>
 										<ul class="pt15 pb10">
@@ -699,7 +705,8 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="profitable-offer__card df jc-between profitable-offer__card-four c-white pt20 pl20 pb20 pr10">
+								<div
+									class="profitable-offer__card df jc-between profitable-offer__card-four c-white pt20 pl20 pb20 pr10">
 									<div class="profitable-offer__info">
 										<h3 class="fw700 fs28">Счастливые часы</h3>
 										<ul class="pt15 pb10">
