--- a/products.html
+++ b/products.html
@@ -1190,7 +1190,8 @@
 					</div>
 					<div class="footer-right">
 						<div class="mb20">
-							<h6 class="fs16 footer-series-title df fw600 mb5">О компании <span><img src="./images/bottom-arow-2.svg" alt=""></span></h6>
+							<h6 class="fs16 footer-series-title df fw600 mb5">О компании <span><img src="./images/bottom-arow-2.svg"
+										alt=""></span></h6>
 							<ul class="footer-series series-5">
 								<li><a href="#">Пользовательское соглашение</a></li>
 								<li><a href="#">Контакты</a></li>
