--- a/products.html
+++ b/products.html
@@ -232,7 +232,41 @@
 		<main class="main">
 			<div class="container">
 				<!-- product series start -->
+				<div class="back-btn__box mb15">
+					<button class="back-btn fw400 fs16 df ai-center">
+						<svg class="mr10" width="14" height="6" viewBox="0 0 14 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M3 0L0 3L3 6L3.707 5.293L1.914 3.5H14V2.5H1.914L3.707 0.707L3 0Z" fill="#1E1E1E" />
+						</svg>
+						Все рестораны
+					</button>
+				</div>
 				<section class="product pr">
+					<div class="row mb25">
+						<div class="col-lg-9 col-md-9">
+							<div class="product-sotring__bar">
+								<ul class="df ai-center jc-between">
+									<li>
+										<a class="product-sotring__bar-active" href="#">Акции</a>
+									</li>
+									<li>
+										<a href="#">Выгодные предложения</a>
+									</li>
+									<li>
+										<a href="#">Пиццы</a>
+									</li>
+									<li>
+										<a href="#">Закуски</a>
+									</li>
+									<li>
+										<a href="#">Комбо</a>
+									</li>
+									<li>
+										<a href="#">Десерты</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
 					<div class="row">
 						<!-- product-left sewries -->
 						<div class="col-lg-9 col-xl-9 col-md-9 col-sm-9 col-xs-12">
@@ -242,17 +276,52 @@
 									<h4 class="c-white">Domino's Pizza</h4>
 								</div>
 								<div class="domin-series">
-									<div class="series mr25">
-										<!-- left -->
-										<div class="series-left">
-											<img src="./images/car-icon.svg" alt="" width="25px">
+									<div class="pr series mr25">
+										<div class="series series-one pr">
+											<!-- left -->
+											<div class="series-left">
+												<img src="./images/car-icon.svg" alt="" width="25px">
+											</div>
+											<!-- right -->
+											<div class="serties-right">
+												<h6 class="c-white">30-40 <span>мин</span></h6>
+											</div>
 										</div>
-										<!-- right -->
-										<div class="serties-right">
-											<h6 class="c-white">30-40 <span>мин</span></h6>
+										<div class="select-box__items pa dn">
+											<div class="select-box__items-header btn df">
+												<button class="select-box__btn active-btn">Сегодня</button>
+												<button class="select-box__btn ml15">Завтра</button>
+											</div>
+											<div class="select-box__items-info mt15">
+												<div class="select-box__list df ai-center jc-between">
+													<span class="fs14 fw400">Сейчас</span>
+													<img src="images/check.svg" alt="">
+												</div>
+												<div class="select-box__list df ai-center jc-between">
+													<span class="fs14 fw400">14:00</span>
+												</div>
+												<div class="select-box__list df ai-center jc-between">
+													<span class="fs14 fw400">15:00</span>
+												</div>
+												<div class="select-box__list df ai-center jc-between">
+													<span class="fs14 fw400">16:00</span>
+												</div>
+												<div class="select-box__list df ai-center jc-between">
+													<span class="fs14 fw400">17:00</span>
+												</div>
+												<div class="select-box__list df ai-center jc-between">
+													<span class="fs14 fw400">18:00</span>
+												</div>
+												<div class="select-box__list df ai-center jc-between">
+													<span class="fs14 fw400">19:00</span>
+												</div>
+												<div class="select-box__list df ai-center jc-between">
+													<span class="fs14 fw400">20:00</span>
+												</div>
+											</div>
 										</div>
 									</div>
-									<div class="series mr25">
+									<div class="series mr25 series-two">
 										<!-- left -->
 										<div class="series-left">
 											<svg width="25" height="25" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -265,9 +334,32 @@
 										<div class="serties-right">
 											<h6 class="c-white">3.9<span>200+</span></h6>
 										</div>
+
 									</div>
-									<div class="series">
-										<img src="./images/icon-info-2.svg" alt="" width="30">
+									<div class="series-two__modal pa dn">
+
+										<div class="modal-body pr">
+											<button class="btn-close pa"><img src="images/clode-modal.svg" alt=""></button>
+											<h3 class="fw500 fs20">Рейтинг: 4.7</h3>
+											<p class="fw500 fs16">На основе: 100 оценок</p>
+										</div>
+									</div>
+									<div class="series-three__box">
+										<div class="series series-three pr">
+											<img src="./images/icon-info-2.svg" alt="" width="30">
+
+										</div>
+										<div class="series-three__modal pa dn">
+											<h4 class="fs6 fw600">Domino's Pizza</h4>
+											<p class="fs12 fw400 pt10 pb10">Шарикоподшипниковская улица, 11с5</p>
+											<p class="fs12 fw400 line">Сегодня до 21:30</p>
+											<p class="fw400 fs12 text-muted">Исполнитель (продавец): ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ
+												"ПИЦЦА РЕСТОРАНТС",
+												121096, Москва, Москва, Олимпийский
+												пр-т, д. 16, строение 5, этаж 2, помещение I, комната 10а, д 1, пом I комн 38, ИНН 7736652262,
+												рег. номер
+												1127747188909</p>
+										</div>
 									</div>
 								</div>
 							</div>
