--- a/registration.html
+++ b/registration.html
@@ -131,7 +131,7 @@
 				</div>
 				<div class="domin mt30">
 					<div class="row">
-						<div class="col-lg-8">
+						<div class="col-lg-8 col-xl-8 col-md-8 col-sm-7 col-xs-7">
 							<div class="domin-left">
 								<div class="terms">
 									<div class="terms-title">
@@ -301,7 +301,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4">
+						<div class="col-lg-4 col-xl-4 col-md-4 col-sm-5 col-xs-5">
 							<div class="domin-right">
 								<div class="oplata-title mb30">
 									<h4 class="fw600 fs24 lh30">Способ оплаты</h4>
@@ -380,7 +380,173 @@
 							</div>
 						</div>
 					</div>
-				
+					<div class="pizza">
+						<div class="row">
+							<div class="col-lg-12">
+								<div class="title mt50 mb25">
+									<h1 class="title-text fw600">Добавить</h1>
+								</div>
+							</div>
+						</div>
+						<div class="pr">
+							<div class="swiper mySwiper4">
+								<div class="swiper-wrapper">
+									<div class="swiper-slide mb20">
+										<div class="pizza-card">
+											<div class="pizza-card-img pr">
+												<div class="discount pa">
+													<div class="discount-series mb5 discount-series-1 df ai-center">
+														<div class="series-icon mr5 df ai-center">
+															<img src="./images/discount-icon.svg" alt="">
+														</div>
+														<p class="fw600 c-white">Скидка 20%</p>
+													</div>
+													<div class="discount-series discount-series-2 df ai-center">
+														<div class="series-icon mr5 df ai-center">
+															<img src="./images/icon-foiz.svg" alt="">
+														</div>
+														<p class="fw600 c-white">Выгодно</p>
+													</div>
+												</div>
+												<div class="cashback df ai-center pa">
+													<div class="series-icon mr5 df ai-center">
+														<img src="./images/icon-rubl.svg" alt="">
+													</div>
+													<p class="fw600 c-white">Кэшбэк 3%</p>
+												</div>
+												<img src="./images/pizza-card-4.png" alt="">
+											</div>
+											<div class="pizza-card-about">
+												<div class="price mt5">
+													<h6 class="lh20 df ai-center">751₽ <span class="fw500 fs12 db">936₽</span>
+													</h6>
+												</div>
+												<h6 class="fw400 lh16">Охотничья, Большая (33 см)</h6>
+												<button type="button" class="purchase fw500 c-white">Добавить</button>
+											</div>
+										</div>
+									</div>
+									<div class="swiper-slide mb20">
+										<div class="pizza-card">
+											<div class="pizza-card-img pr">
+												<div class="discount pa">
+													<div class="discount-series mb5 discount-series-1 df ai-center">
+														<div class="series-icon mr5 df ai-center">
+															<img src="./images/discount-icon.svg" alt="">
+														</div>
+														<p class="fw600 c-white">Скидка 20%</p>
+													</div>
+												</div>
+												<div class="cashback df ai-center pa">
+													<div class="series-icon mr5 df ai-center">
+														<img src="./images/icon-rubl.svg" alt="">
+													</div>
+													<p class="fw600 c-white">Кэшбэк 3%</p>
+												</div>
+												<img src="./images/pizza-card-7.png" alt="">
+											</div>
+											<div class="pizza-card-about">
+												<div class="price mt5">
+													<h6 class="lh20 df ai-center">751₽ <span class="fw500 fs12 db">936₽</span>
+													</h6>
+												</div>
+												<h6 class="fw400 lh16">Охотничья, Большая (33 см)</h6>
+												<button type="button" class="purchase fw500 c-white">Добавить</button>
+											</div>
+										</div>
+									</div>
+									<div class="swiper-slide mb20">
+										<div class="pizza-card">
+											<div class="pizza-card-img pr">
+												<div class="discount pa">
+													<div class="discount-series mb5 discount-series-1 df ai-center">
+														<div class="series-icon mr5 df ai-center">
+															<img src="./images/discount-icon.svg" alt="">
+														</div>
+														<p class="fw600 c-white">Скидка 20%</p>
+													</div>
+													<div class="discount-series discount-series-2 df ai-center">
+														<div class="series-icon mr5 df ai-center">
+															<img src="./images/icon-foiz.svg" alt="">
+														</div>
+														<p class="fw600 c-white">Выгодно</p>
+													</div>
+												</div>
+												<img src="./images/pizza-card-3.png" alt="">
+											</div>
+											<div class="pizza-card-about">
+												<div class="price mt5">
+													<h6 class="lh20 df ai-center">751₽ <span class="fw500 fs12 db">936₽</span>
+													</h6>
+												</div>
+												<h6 class="fw400 lh16">Охотничья, Большая (33 см)</h6>
+												<button type="button" class="fw500 purchase c-white">Добавить</button>
+											</div>
+										</div>
+									</div>
+									<div class="swiper-slide mb20">
+										<div class="pizza-card">
+											<div class="pizza-card-img pr">
+												<div class="discount pa">
+													<div class="discount-series discount-series-2 df ai-center">
+														<div class="series-icon mr5 df ai-center">
+															<img src="./images/icon-foiz.svg" alt="">
+														</div>
+														<p class="fw600 c-white">Выгодно</p>
+													</div>
+												</div>
+												<div class="cashback df ai-center pa">
+													<div class="series-icon mr5 df ai-center">
+														<img src="./images/icon-rubl.svg" alt="">
+													</div>
+													<p class="fw600 c-white">Кэшбэк 3%</p>
+												</div>
+												<img src="./images/pizza-card-4.png" alt="">
+											</div>
+											<div class="pizza-card-about">
+												<div class="price mt5">
+													<h6 class="lh20 df ai-center">751₽ <span class="fw500 fs12 db">936₽</span>
+													</h6>
+												</div>
+												<h6 class="fw400 lh16">Охотничья, Большая (33 см)</h6>
+												<button type="button" class="fw500 purchase c-white">Добавить</button>
+											</div>
+										</div>
+									</div>
+									<div class="swiper-slide mb20">
+										<div class="pizza-card">
+											<div class="pizza-card-img pr">
+												<div class="discount pa">
+													<div class="discount-series mb5 discount-series-1 df ai-center">
+														<div class="series-icon mr5 df ai-center">
+															<img src="./images/discount-icon.svg" alt="">
+														</div>
+														<p class="fw600 c-white">Скидка 20%</p>
+													</div>
+													<div class="discount-series discount-series-2 df ai-center">
+														<div class="series-icon mr5 df ai-center">
+															<img src="./images/icon-foiz.svg" alt="">
+														</div>
+														<p class="fw600 c-white">Выгодно</p>
+													</div>
+												</div>
+												<img src="./images/pizza-card-3.png" alt="">
+											</div>
+											<div class="pizza-card-about">
+												<div class="price mt5">
+													<h6 class="lh20 df ai-center">751₽ <span class="fw500 fs12 db">936₽</span>
+													</h6>
+												</div>
+												<h6 class="fw400 lh16">Охотничья, Большая (33 см)</h6>
+												<button type="button" class="fw500 purchase c-white">Добавить</button>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="swiper-pagination df ai-center"></div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
